feat: Resource Owner Password 권한 부여 구현 (1) 예제 소스 추가

--- a/oauth2client-2/src/main/resources/templates/index.html
+++ b/oauth2client-2/src/main/resources/templates/index.html
@@ -18,7 +18,8 @@
 <div>Welcome</div>
 <div sec:authorize="isAuthenticated()"><a th:href="@{/logout}">Logout</a></div>
 <form sec:authorize="isAnonymous()" action="#">
-  <p><input type="button" onclick="authorizationCode()" value="AuthorizationCode Grant"/>
+  <p><input type="button" onclick="authorizationCode()" value="AuthorizationCode Grant"/></p>
+  <p><a th:href="@{/oauth2Login(username='user', password='12345')}">Password Flow Login</a></p>
 </form>
 </body>
 </html>
