feat: Client Credentials 권한 부여 구현 예제 소스 추가

--- a/oauth2client-2/src/main/resources/templates/home.html
+++ b/oauth2client-2/src/main/resources/templates/home.html
@@ -16,6 +16,7 @@
   Welcome
   <p>
     <span th:text="${oAuth2AuthenticationToken}" />
+    <span th:text="${authorizedClient}" />
   </p>
 
 </div>
