--- a/oauth2client-2/src/main/resources/templates/index.html
+++ b/oauth2client-2/src/main/resources/templates/index.html
@@ -20,6 +20,7 @@
 <form sec:authorize="isAnonymous()" action="#">
   <p><input type="button" onclick="authorizationCode()" value="AuthorizationCode Grant"/></p>
   <p><a th:href="@{/oauth2Login(username='user', password='12345')}">Password Flow Login</a></p>
+  <p><a th:href="@{/oauth2Login}">Client Credentials Login</a></p>
 </form>
 </body>
 </html>
