--- a/oauth2client-2/src/main/resources/templates/home.html
+++ b/oauth2client-2/src/main/resources/templates/home.html
@@ -14,18 +14,16 @@
 
 <div>
   Welcome
-  <p>
-    <span th:text="${oAuth2AuthenticationToken}" />
-    <span th:text="${authorizedClient}" />
-  </p>
+  <div>AccessToken : <span th:text="${accessToken}"/></div>
+  <br/>
+  <div>RefreshToken <span th:text="${refreshToken}"/></div>
 
 </div>
 
 
-
-<div sec:authorize="isAuthenticated()">
-  <a th:href="@{/logout}">Logout</a>
-</div>
+<!--<div sec:authorize="isAuthenticated()">-->
+<a th:href="@{/logout}">Logout</a>
+<!--</div>-->
 
 </body>
 </html>
